[package]
name = "tauri-react-demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_react_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

# Tauri official plugins
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

# optional plugins if you plan to use filesystem / notifications / OS info later
# tauri-plugin-fs = "2"
# tauri-plugin-notification = "2"
# tauri-plugin-os = "2"


# System and activity tracking
windows = { version = "0.56", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
sysinfo = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scrap = "0.5"          
image = "0.24"        
chrono = "0.4"        
rdev = "0.5"           
parking_lot = "0.12"   
log = "0.4"
env_logger = "0.10"
